[gd_scene load_steps=31 format=3 uid="uid://dgc6utx06dd54"]

[ext_resource type="Script" path="res://scripts/pea_blaster.gd" id="1_22pup"]
[ext_resource type="Texture2D" uid="uid://bo47v806lmn4p" path="res://assets/characters/gorilla/attack/1.png" id="2_7akfa"]
[ext_resource type="Texture2D" uid="uid://bgv55ofuh5bvl" path="res://sprites/pvv_peablasting.png" id="2_ay2b3"]
[ext_resource type="PackedScene" uid="uid://kqjgpwrln2xx" path="res://scenes/progress_bar.tscn" id="2_fl3qo"]
[ext_resource type="Texture2D" uid="uid://f5uxf7haeika" path="res://sprites/pvv_sunpea.png" id="3_4r1qs"]
[ext_resource type="Texture2D" uid="uid://dh66wij3v6qtc" path="res://assets/characters/gorilla/attack/2.png" id="3_cranj"]
[ext_resource type="PackedScene" uid="uid://dvy7lryr5q3ee" path="res://scenes/health_bar.tscn" id="3_iyv66"]
[ext_resource type="Texture2D" uid="uid://csha7311xrhcx" path="res://assets/characters/gorilla/attack/3.png" id="4_0srkb"]
[ext_resource type="Texture2D" uid="uid://r4m3gt5m5ftf" path="res://assets/characters/gorilla/attack/4.png" id="5_vose8"]
[ext_resource type="Texture2D" uid="uid://gyx4t281j7cj" path="res://assets/characters/gorilla/attack/5.png" id="6_mv6j2"]
[ext_resource type="Texture2D" uid="uid://bwb7vy6ybu5ii" path="res://assets/characters/gorilla/attack/6.png" id="7_dypo5"]
[ext_resource type="Texture2D" uid="uid://b6o1dhqas58d4" path="res://assets/characters/gorilla/idle/1.png" id="8_chvlf"]
[ext_resource type="Texture2D" uid="uid://b8dag0ywrh814" path="res://assets/characters/gorilla/idle/2.png" id="9_h1sjo"]
[ext_resource type="Texture2D" uid="uid://c6il38iyqf3fe" path="res://assets/characters/gorilla/idle/3.png" id="10_nshpd"]
[ext_resource type="Texture2D" uid="uid://mojcaey5ujdo" path="res://assets/characters/gorilla/idle/4.png" id="11_gaasf"]
[ext_resource type="AudioStream" uid="uid://brn63h7bwwoey" path="res://assets/sound/juicy-splash-104642.mp3" id="16_bylyy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kw2pp"]
atlas = ExtResource("3_4r1qs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_im64l"]
atlas = ExtResource("3_4r1qs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i1ix"]
atlas = ExtResource("3_4r1qs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll6ii"]
atlas = ExtResource("3_4r1qs")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocksi"]
atlas = ExtResource("3_4r1qs")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc883"]
atlas = ExtResource("3_4r1qs")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bs2r"]
atlas = ExtResource("3_4r1qs")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46hbs"]
atlas = ExtResource("2_ay2b3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ov8w"]
atlas = ExtResource("2_ay2b3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2apo6"]
atlas = ExtResource("2_ay2b3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5avc"]
atlas = ExtResource("3_4r1qs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y6k14"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_dypo5")
}, {
"duration": 1.0,
"texture": ExtResource("6_mv6j2")
}, {
"duration": 1.0,
"texture": ExtResource("2_7akfa")
}, {
"duration": 1.0,
"texture": ExtResource("3_cranj")
}, {
"duration": 1.0,
"texture": ExtResource("4_0srkb")
}, {
"duration": 1.0,
"texture": ExtResource("5_vose8")
}],
"loop": true,
"name": &"action",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_chvlf")
}, {
"duration": 1.0,
"texture": ExtResource("9_h1sjo")
}, {
"duration": 1.0,
"texture": ExtResource("10_nshpd")
}, {
"duration": 1.0,
"texture": ExtResource("11_gaasf")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw2pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im64l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i1ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll6ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocksi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc883")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bs2r")
}],
"loop": true,
"name": &"mini_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46hbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ov8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2apo6")
}],
"loop": true,
"name": &"power_up",
"speed": 36.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5avc")
}],
"loop": true,
"name": &"seed",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ik8d"]
size = Vector2(484, 14)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q3kiv"]
radius = 8.0
height = 26.0

[node name="pea_blaster" type="Node2D"]
process_mode = 1
script = ExtResource("1_22pup")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.69532, -5.30468)
scale = Vector2(0.421191, 0.446191)
sprite_frames = SubResource("SpriteFrames_y6k14")
animation = &"action"
frame = 5
frame_progress = 0.692726

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="timer_bar" parent="." instance=ExtResource("2_fl3qo")]
modulate = Color(0.509804, 0.823529, 0.509804, 1)
position = Vector2(-15, 8)
scale = Vector2(0.2, 0.2)

[node name="health_bar" parent="." instance=ExtResource("3_iyv66")]
modulate = Color(0.960784, 0.25098, 0.298039, 1)
z_index = -1
position = Vector2(-15, -15)
scale = Vector2(0.2, 0.2)

[node name="shoot_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_range"]
position = Vector2(238, 0)
shape = SubResource("RectangleShape2D_3ik8d")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_q3kiv")

[node name="enter_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_bylyy")

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
